# graphene_testing

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
api_on_graphql/: manage.py  movies.json
api_on_graphql/api_on_graphql/: schema.py  settings.py  urls.py  wsgi.py
api_on_graphql/config/: .env.template
api_on_graphql/movies/: models.py  schema.py
api_on_graphql/movies/migrations/: 0001_initial.py
