[tool.poetry]
name = "graphene_testing"
version = "0.1.0"
description = ""
authors = ["SaPer663 <saper663ru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.28"
graphene-django = "^2.15.0"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
isort = "^5.10.1"
flake8 = "^4.0.1"
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
